--- a/Sprawozdanie3_Karol_Szpyt.Rmd
+++ b/Sprawozdanie3_Karol_Szpyt.Rmd
@@ -127,7 +127,7 @@ boot_coef <- function(dane)
     model <- lm(lp100km ~ ., data = dane[boot_sample, ])
     return(coef(model))
 }
-bootstrap <- function(dane, alpha = 0.05, n = N)
+bootstrap <- function(dane, alpha = 0.05, n = 10^4)
 {
   coefs <- sapply(rep(1, n), function(x) boot_coef(dane))
   conf_inter <- apply(coefs, 1, function(x) quantile(x, c(alpha/2, 1-alpha/2)) )
@@ -147,11 +147,15 @@ bootstrap <- function(dane, alpha = 0.05, n = N)
     }
   }
   index <- 0
-  index <- which(pvec[, -1] > alpha)
+  pvec <- as.numeric(pvec[, -1])
+  index <- which(pvec > alpha)
+  
+  #index <- which(pvec[index == max(pvec)])
   if(length(index) != 0)
   {
+      index <- which(pvec == max(pvec, na.rm = TRUE))
       dane <- dane[, -(index + 1)]
-      bootstrap(dane)
+      bootstrap(dane, alpha, n)
   }
   else
   {
